--- a/assets/css/source/_header.scss
+++ b/assets/css/source/_header.scss
@@ -1,15 +1,22 @@
 header.header-cntb{
+    padding-top: 25px;
 
-    padding-top: 75px;
+    @include for-phone-landscape-up{
+        padding-top: 75px;
+    }
 
     .col-5{
         padding-right: 0;
     }
 
-    .home-brand img{
-        width: 150px;
-    }
-
+    .home-brand{
+        margin-block-end: 0;
+        
+        img{
+            width: 150px;
+        }
+    } 
+    
     .home-title{
         font-family: $primary-light;
         font-size: $regular-desktop;
