--- a/assets/css/source/_variables.scss
+++ b/assets/css/source/_variables.scss
@@ -5,6 +5,7 @@ $lightblue: #22d3c5;
 $lighterblue: #ccfeff;
 $lightbrown: #fbe3c6;
 $pale: #fee8cb;
+$cream: #f9fdbf;
 $lightpeach: #fed198;
 $lightgrey: #beced6;
 $pale-grey: #ecf0f3;
